[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font/Karma_30.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scene/UI/Regionselect/RegionSelect.gd" type="Script" id=2]
[ext_resource path="res://Scene/UI/Mouse_cursor.tscn" type="PackedScene" id=6]

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.929412, 1, 0.435294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 205.0
custom_constants/separation = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REGION SELECT"
align = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 480.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OFFICE"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 480.0
margin_bottom = 149.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LAB"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 480.0
margin_bottom = 205.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BACK"

[node name="Mouse_cursor" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
